# simple_archi_poc

./: .gitignore  .pre-commit.config.yaml  README.md  pyproject.toml
app/: config.py  server.py
app/crud/: context.py  user.py
app/database/: models.py  setup.py
app/routes/: context.py  user.py
app/schema/: schemas.py
